# pkg/rest/docs/swagger.yaml
@@ -39,6 +39,21 @@ definitions:
         example: 10_3931_e-rara-20425_20230519T104744_gen6_ver1.zip_10_3931_e-rara-20425_export_mets.xml
         type: string
     type: object
+  rest.GetDerivateIngestItemMessage:
+    properties:
+      subtype:
+        example: mp4
+        type: string
+      suffixes:
+        example:
+        - $$web
+        items:
+          type: string
+        type: array
+      type:
+        example: video
+        type: string
+    type: object
   rest.HTTPCollectionResultMessage:
     properties:
       description:
@@ -354,6 +369,45 @@ paths:
       security:
       - BearerAuth: []
       summary: next ingest item
+      tags:
+      - mediaserver
+  /ingest/derivate:
+    post:
+      description: gets next item for creating derivates
+      operationId: get-derivate-ingest-item
+      parameters:
+      - description: data type and suffixes
+        in: body
+        name: type
+        required: true
+        schema:
+          $ref: '#/definitions/rest.GetDerivateIngestItemMessage'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/rest.HTTPIngestItemMessage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/rest.HTTPResultMessage'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/rest.HTTPResultMessage'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/rest.HTTPResultMessage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/rest.HTTPResultMessage'
+      security:
+      - BearerAuth: []
+      summary: next derivate ingest item
       tags:
       - mediaserver
   /item/{collection}:
